--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.3",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
